; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_mch_delay.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_mch_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIOSTICK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mch_delay(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = call i64 @biostime(i32 0, i64 0)
  store i64 %9, i64* %5, align 8
  br label %10

10:                                               ; preds = %18, %8
  %11 = call i64 @biostime(i32 0, i64 0)
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* @BIOSTICK, align 8
  %15 = sdiv i64 %13, %14
  %16 = add nsw i64 %12, %15
  %17 = icmp slt i64 %11, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %10
  br label %10

19:                                               ; preds = %10
  br label %23

20:                                               ; preds = %2
  %21 = load i64, i64* %3, align 8
  %22 = call i32 @WaitForChar(i64 %21)
  br label %23

23:                                               ; preds = %20, %19
  ret void
}

declare dso_local i64 @biostime(i32, i64) #1

declare dso_local i32 @WaitForChar(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
